"tried using media query to fix 1440px since it looks too small"

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -81,6 +81,23 @@ footer {
     top: 90px
 }
 
-@media (mad-width: 1440px) {
-    
+/* Media Queries for max-width 1440px */
+@media (max-width: 1440px) {
+    .navbar-brand {
+        font-size: 2rem; 
+    }
+
+    .nav-link {
+        font-size: 1.2rem; 
+    }
+
+    .greeting, .about {
+        font-size: 1.2rem; 
+        top: 100px; 
+    }
+
+    footer {
+        top: 300px; 
+        font-size: 1.2rem; 
+    }
 }
